content/en/examples/access/delegated-certificate-signing-request/installer-csr-delegation-validatingadmissionpolicybinding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "installer-csr-delegation-policy-binding"
spec:
  policyName: "installer-csr-delegation-policy"
  validationActions: [Deny]
  paramRef:
    name: "admission-policies-installer-csr-config"
    namespace: "csr-signer-installer"
    parameterNotFoundAction: "Deny"
